# marimushka

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  action.yml  demo.py  index.html  pyproject.toml  ruff.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  template.yml
.github/scripts/: release.sh
.github/workflows/: book.yml  pre-commit.yml  pytest.yml  release.yml  sync.yml  test.yml  test_action.yml  test_action_workflow.yml
actions/deploy/: action.yml
actions/export/: README.md  action.yml  templates
actions/export/template/: default.html.j2
actions/export/templates/: default.html.j2
book/: _config.yml
book/docs/: api.md  index.md  marimo.md  reports.md
notebooks/: fibonacci.html  penguins.html
src/marimograd/: export.py
src/marimushka/: __init__.py  export.py  notebook.py
src/marimushka/templates/: README.md  default.html.j2
src/tests/: __init__.py  conftest.py  test_cli.py  test_complete.py  test_export.py  test_export_html_wasm.py  test_generate_index.py  test_help.py  test_link_validator.py  test_main.py  test_notebook.py  test_version.py
src/tests/resources/: templates
src/tests/resources/apps/: charts.py
src/tests/resources/html_output/: complete_output.html  no_apps_output.html
src/tests/resources/notebooks/: fibonacci.py  penguins.py
src/tests/utils/: __init__.py  link_validator.py
templates/: README.md  tailwind.html.j2
tests/: test_cli.py  test_complete.py  test_export.py  test_help.py  test_link_validator.py  test_notebook.py  test_release_script.py  test_version.py
tests/resources/apps/: charts.py
tests/resources/notebooks/: fibonacci.py  penguins.py
tests/utils/: link_validator.py
