[project]
name = 'marimushka'
version = "0.0.0"
description = "Export marimo notebooks in style"
authors = [{name='Thomas Schmelzer', email= 'thomas.schmelzer@gmail.com'}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fire>=0.7.0",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=6.2.1",
]

[project.urls]
repository = "https://github.com/tschm/marimushka"

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    "*__init__.py"
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Entry points for command-line scripts
[project.scripts]
marimushka = "marimushka.export:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/marimushka"]

[tool.hatch.build]
include = [
    "LICENSE",    # Ensure the LICENSE file is included in your package
    "README.md",
    "src/marimushka"
]
