[project]
name = 'marimushka'
version = "0.0.0"
description = "Export marimo notebooks in style"
authors = [{name='Jebel Quant LLC', email= 'contact@jqr.ae'}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.16.0",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "rich==14.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=6.2.1",
    "beautifulsoup4>=4.12.0"
]

[project.urls]
repository = "https://github.com/jebel-quant/marimushka"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Entry points for command-line scripts
[project.scripts]
marimushka = "marimushka.export:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/marimushka"]

[tool.hatch.build]
include = [
    "LICENSE",    # Ensure the LICENSE file is included in your package
    "README.md",
    "src/marimushka"
]

[tool.deptry]
# see https://deptry.com/usage/#pep-621-dev-dependency-groups
pep621_dev_dependency_groups = ["dev"]
